--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.1.2",
-    "rest": "^1.3.1"
+    "rest": "^1.3.1",
+    "style-loader": "^1.1.2"
   },
   "scripts": {
     "watch": "webpack --watch -d"
