--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.1.2",
-    "rest": "^1.3.1",
-    "style-loader": "^1.1.2"
+    "rest": "^1.3.1"
   },
   "scripts": {
     "watch": "webpack --watch -d"
@@ -19,7 +18,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^3.4.0",
+    "css-loader": "^3.4.1",
+    "style-loader": "^1.1.2",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
