--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "A simple meme surfing website",
   "dependencies": {
+    "@keyframes/core": "^2.0.2",
     "axios": "^0.19.0",
+    "jquerykeyframes": "^1.0.8",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.1.2",
