--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple meme surfing website",
   "dependencies": {
     "@keyframes/core": "^2.0.2",
+    "@material-ui/core": "^4.9.0",
     "axios": "^0.19.0",
     "jquerykeyframes": "^1.0.8",
     "react": "^16.5.2",
