--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.1.2",
-    "rest": "^1.3.1"
+    "react-transition-group": "^4.3.0",
+    "rest": "^1.3.1",
+    "@mui-treasury/components": "0.3.0",
+    "@mui-treasury/styles": "0.3.1",
+    "@mui-treasury/styling": "0.2.0"
   },
   "scripts": {
     "watch": "webpack --watch -d"
