--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "dependencies": {
     "@keyframes/core": "^2.0.2",
     "@material-ui/core": "^4.9.0",
+    "@mui-treasury/components": "0.3.0",
+    "@mui-treasury/styles": "0.3.1",
+    "@mui-treasury/styling": "0.2.0",
     "axios": "^0.19.0",
     "jquerykeyframes": "^1.0.8",
+    "jss": "^10.0.4",
+    "jss-preset-default": "^10.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
-    "rest": "^1.3.1",
-    "@mui-treasury/components": "0.3.0",
-    "@mui-treasury/styles": "0.3.1",
-    "@mui-treasury/styling": "0.2.0"
+    "rest": "^1.3.1"
   },
   "scripts": {
     "watch": "webpack --watch -d"
