WIP: Creating create post page

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "description": "A simple meme surfing website",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
     "@keyframes/core": "^2.0.2",
     "@material-ui/core": "^4.9.0",
+    "@material-ui/lab": "^4.0.0-alpha.41",
     "@mui-treasury/components": "0.3.0",
     "@mui-treasury/styles": "0.3.1",
     "@mui-treasury/styling": "0.2.0",
@@ -12,10 +15,13 @@
     "jquerykeyframes": "^1.0.8",
     "jss": "^10.0.4",
     "jss-preset-default": "^10.0.4",
+    "material-ui-dropzone": "^2.4.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
+    "regenerator-runtime": "^0.13.3",
     "rest": "^1.3.1"
   },
   "scripts": {
@@ -25,8 +31,11 @@
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^3.4.1",
     "style-loader": "^1.1.2",
     "svg-inline-loader": "^0.8.0",
