1. Switched to remote DB 2. BugFix: Couldn't get top posts when there were no posts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/10gag?useSSL=false
+spring.datasource.url=jdbc:mysql://main-database.ceg0laboyeji.us-east-2.rds.amazonaws.com:3306/mydatabase?useSSL=false
 spring.datasource.username=sanil
-spring.datasource.password=root
+spring.datasource.password=rootroot
 
 spring.jpa.show-sql=false
 
