--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,22 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<classifier>spring-boot</classifier>
+							<mainClass>
+								in.co.sanilkhurana.tengag.Application
+							</mainClass>
+							<finalName>
+								10gag
+							</finalName>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 
 			<plugin>
