--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://main-database.ceg0laboyeji.us-east-2.rds.amazonaws.com:3306/mydatabase?useSSL=false
-spring.datasource.username=sanil
-spring.datasource.password=rootroot
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?useSSL=false
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.show-sql=false
 
