--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,8 @@ node_modules/
 .DS_Store
 .env.local
 .vscode
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+.env
 
 npm-debug.log*
 yarn-debug.log*
