--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui-treasury/styling": "0.2.0",
     "aws-sdk": "^2.656.0",
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "jquerykeyframes": "^1.0.8",
     "jss": "^10.0.4",
     "jss-preset-default": "^10.0.4",
